--- a/ImperialWizard/css/sites_main.css
+++ b/ImperialWizard/css/sites_main.css
@@ -19,6 +19,15 @@ body {
     }
 }
 
+.toclimit-2 .toclevel-1 ul,
+.toclimit-3 .toclevel-2 ul,
+.toclimit-4 .toclevel-3 ul,
+.toclimit-5 .toclevel-4 ul,
+.toclimit-6 .toclevel-5 ul,
+.toclimit-7 .toclevel-6 ul {
+    display: none;
+}
+
 .sidebar-nav {
     padding: 9px 0;
 }
@@ -97,6 +106,11 @@ h3 {
 h3, h4, h5, h6 {
     margin-top: 18px;
     line-height: 1.3em;
+}
+
+ul {
+    list-style-position: inside;
+    margin-left: 15px;
 }
 
 
@@ -221,13 +235,14 @@ footer p {
 }
 
 .navbar-inner, .navbar .fill {
-
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a90329+0,8f0222+44,6d0019+100;Brown+Red+3D */
-    background: rgb(169, 3, 41); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(169, 3, 41, 1) 0%, rgba(143, 2, 34, 1) 44%, rgba(109, 0, 25, 1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(169, 3, 41, 1) 0%, rgba(143, 2, 34, 1) 44%, rgba(109, 0, 25, 1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(169, 3, 41, 1) 0%, rgba(143, 2, 34, 1) 44%, rgba(109, 0, 25, 1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a90329', endColorstr='#6d0019', GradientType=0); /* IE6-9 */
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#A32189), to(#7A1867));
+    background-image: -moz-linear-gradient(top, #A32189, #7A1867);
+    background-image: -ms-linear-gradient(top, #A32189, #7A1867);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #A32189), color-stop(100%, #7A1867));
+    background-image: -webkit-linear-gradient(top, #A32189, #7A1867);
+    background-image: -o-linear-gradient(top, #A32189, #7A1867);
+    background-image: linear-gradient(top, #A32189, #7A1867);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#A32189', endColorstr='#7A1867', GradientType=0);
 }
 
 .navbar .nav > li > a {
@@ -263,12 +278,17 @@ div.infobox table#toc {
     margin: 0.3em 0px 0px 1.6em;
 }
 
-.toctitle h2, div.infobox h1 {
+#toctitle h2, div.infobox h1 {
     font-size: 11px;
     font-weight: bold;
     line-height: 18px;
     color: #999999;
     text-transform: uppercase;
+}
+
+.sectionLinks {
+    vertical-align: baseline;
+    float: right;
 }
 
 #pageButtons {
@@ -378,6 +398,49 @@ div.box-inner {
     -webkit-box-shadow: 7px 7px 7px #AAA;
     box-shadow: 7px 7px 7px #AAA;
 }
+
+.imagegrid {
+    display: grid;
+}
+
+div.imagegrid img {
+    width: 100%;
+}
+
+div.fourpicture {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    margin-bottom: 10px;
+}
+
+div.fourpicture img, div.picturecolumn img {
+    width: 100%;
+}
+
+div.picturecolumn {
+    display: flex;
+    flex-direction: column;
+}
+
+
+@media (min-width: 411px) {
+    div.fourpicture {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 1024px) {
+    div.fourpicture {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+div.fourpicture div.captioned-image {
+    margin: 0;
+}
+
 
 div.ic {
     margin: 20px;
@@ -614,4 +677,151 @@ div.wikiEditor-ui-toolbar .group .label {
 .navbar .nav > li > a, .navbar .brand {
     text-shadow: none;
     color: #FFF;
+}
+
+table.BourseTable {
+    width: auto;
+}
+
+table.BourseTable th:nth-child(1) {
+    min-width: 220px;
+}
+
+table.BourseTable th:nth-child(2) {
+    min-width: 190px;
+}
+
+
+:root {
+    --pen: #8ab6df;
+    --pen-dark: #0050D0;
+}
+
+.conduct-container {
+    min-width: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background: white;
+}
+
+.block, .question {
+    padding: .4em .4em;
+    margin: 0;
+    text-align: center;
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/blue-square.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat:
+}
+
+.question {
+    padding: 1.25em 2.5em;
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/blue-diamond.png');
+}
+
+.block-small {
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/blue-square-row1.png');
+}
+
+.grid-1 {
+    grid-column: 1;
+}
+
+.grid-2 {
+    grid-column: 2;
+}
+
+.grid-3 {
+    grid-column: 3;
+}
+
+
+.flex-down {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.flex-horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.arrow-down {
+    height: 8px;
+}
+
+.arrow-horizontal {
+    width: 8px;
+}
+
+.flex-grow-line {
+    flex-grow: 1;
+}
+
+.spacer {
+    opacity: 0;
+}
+
+.slice-vertical {
+    width: 2px;
+}
+
+.slice-horizontal {
+    height: 2px;
+}
+
+.rotate180 {
+    transform: rotate(180deg);
+}
+
+.min-height-12 {
+    min-height: 12px;
+}
+
+.min-height-24 {
+    min-height: 60px;
+}
+
+.width-100 {
+    width: 100%;
+}
+
+div.arrow-down {
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/arrow-down.png');
+    width: 12px;
+    background-size: auto 8px;
+    background-repeat: no-repeat;
+}
+
+div.arrow-horizontal {
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/arrow-left.png');
+    height: 12px;
+    background-size: auto 12px;
+    background-repeat: no-repeat;
+}
+
+div.slice {
+    background-image: url('https://www.profounddecisions.co.uk/resources/img/graphics/slice.png');
+}
+
+div.slice-vertical {
+    width: 2px;
+}
+
+.conduct-container .grid-1 p, .conduct-container .grid-3 p, .full-width {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.slice-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slice-label span {
+    color: var(--pen-dark);
+    background: white;
+    padding: 2px;
 }
